# unc-abi-client-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/delegator-generation/: Cargo.toml  build.rs
examples/delegator-generation/src/: lib.rs
examples/delegator-macro/: Cargo.toml
examples/delegator-macro/src/: lib.rs
res/: adder.json
unc-abi-client/: CHANGELOG.md  Cargo.toml
unc-abi-client-impl/: CHANGELOG.md  Cargo.toml
unc-abi-client-impl/src/: lib.rs
unc-abi-client-macros/: CHANGELOG.md  Cargo.toml
unc-abi-client-macros/src/: lib.rs
unc-abi-client/src/: lib.rs
unc-abi-client/tests/: mod.rs
