[package]
name = "unc-abi-client-impl"
version = "0.10.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/utnet-org/unc-abi-client-rs"
description = """
Library to generate Rust clients for Utility smart contracts.
"""

[dependencies]
quote = "1.0"
anyhow = "1.0"
schemars = "0.8"
serde_json = "1.0"
proc-macro2 = "1.0"
near_schemafy_lib = "0.7"

unc-abi = "0.10.2"
