[package]
name = "unc-abi-client-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/unc-abi-client-rs"
description = """
Library to generate Rust clients for NEAR smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
syn = "1.0"

unc-abi-client-impl = { path = "../unc-abi-client-impl", version = "0.1.0" }
