[package]
name = "unc-abi-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/unc-abi-client-rs"
description = """
Library to generate Rust clients for NEAR smart contracts.
"""

[dependencies]
syn = "1.0"
quote = "1.0"
anyhow = "1.0"
convert_case = "0.5"
prettyplease = "0.1"

unc-abi-client-impl = { path = "../unc-abi-client-impl", version = "0.1.0" }
unc-abi-client-macros = { path = "../unc-abi-client-macros", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
